Fix CORS policy and suppress default security password